--- a/package.json
+++ b/package.json
@@ -1,19 +1,11 @@
-{
-  "name": "discordstatuts",
-  "version": "0.0.2",
-  "description": "",
-  "main": "main.js",
-  "dependencies": {
-    "axios": "^0.18.1",
-    "discord.js": "^11.3.2",
-    "get-json": "^1.0.0",
-    "lodash": "^4.17.11"
-  },
-  "devDependencies": {},
+  "name": "paillasson",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "author": "Noperaattori <noperaattori@pm.me> (https://github.com/noperaattori)",
-  "license": "ISC"
+  "author": "AH_REM",
+  "dependencies": {
+      "discord.js": "^12.1.1",
+  }
 }
