--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "paillasson",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "author": "AH_REM",
   "dependencies": {
-      "discord.js": "^12.1.1",
+    "discord.js": "^12.1.1",
+    "moment-timezone": "^0.5.28"
   }
 }
